2005-09-08  Christian Stimming <stimming@tuhh.de>

	* configure.in: Enable python files by default.

	* ktoblzcheck.pc.in: Add configuration file for pkg-config, let
	this also be installed.

2005-08-12  Christian Stimming <stimming@tuhh.de>

	* Note: Silently released the version 1.7 again with the upgraded
	bundesbank.pl script.
	
	* src/bankdata/online_update.pl.in: Only use the new conversion
	script, dont use recode anymore.

2005-08-11  Christian Stimming <stimming@tuhh.de>

	* src/bankdata/bundesbank.pl.in: New conversion script by
	Alexander Kurz.

2005-08-10  Christian Stimming <stimming@tuhh.de>

	* configure.in: Release version 1.7

	* src/bankdata/bankdata.txt: Updated bankdata file, now valid from
	2005-09-05 onwards

	* src/bankdata/online_update.pl.in: Add recoding of the downloaded
	file into the locale encoding before SED is run, and into the
	library encoding afterwards.

	* src/bankdata/bundesbank.sed.in: non-gnu SED does not have the
	'+' in regexp. Fixed by Alexander Kurz.

	* src/bankdata/online_update.pl.in: Replace hardcoded perl path by
	one determined by ./configure, by Alexander Kurz.

2005-07-29  Christian Stimming  <stimming@tuhh.de>

	* src/include/ktoblzcheck.h: Add function
	AccountNumberCheck::libraryVersion() to return the VERSION conf
	variable, a string like "1.6". Currently the easiest way to get a
	version number into here.

2005-07-27  Christian Stimming  <stimming@tuhh.de>

	* src/include/ktoblzcheck.h: Add function
	AccountNumberCheck::stringEncoding() to make the character
	encoding of the returned strings publicly known.

2005-07-21  Christian Stimming <stimming@tuhh.de>

	* autogen.sh: Simplify the bootstrap script even more.

2005-07-20  Christian Stimming <stimming@tuhh.de>

	* src/lib/methods.cc: B6, B7 and B8 methods added by Alexander
	Kurz.

2005-06-22  Christian Stimming <stimming@tuhh.de>

	* configure.in: Release version 1.6

2005-06-21  Christian Stimming <stimming@tuhh.de>
